openshift-manifests/base/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  strategy:
    type: Recreate


  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/component: controller

    spec:
      serviceAccountName: jenkins

      securityContext:
        runAsNonRoot: true

      containers:
        - name: jenkins
          image: image-registry.openshift-image-registry.svc:5000/gregorie769-dev/jenkins:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

            - name: agent
              containerPort: 50000

          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: jcasc
              mountPath: /var/jenkins_home/casc_configs

          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home

        - name: jcasc
          configMap:
            name: jenkins-jcasc
