openshift-manifests/base/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: jenkins

  ports:
    - name: http
      port: 8080
      targetPort: http

    - name: agent
      port: 50000
      targetPort: agent
