openshift-manifests/base/jenkins/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
spec:
  to:
    kind: Service
    name: jenkins

  port:
    targetPort: http

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
